--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,10 @@
         <item name="android:splitMotionEvents">false</item><!--全用多点触控-->
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/src_bg_splash</item>
+    </style>
+
     <!--    全局的按钮样式-->
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorButtonNormal">?colorAccent</item>
