--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,19 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorControlActivated">@color/colorAccent</item>
-        <item name="android:colorButtonNormal">@color/colorAccent</item><!--这个颜色会影响按钮置灰的颜色-->
+        <item name="android:colorForeground">@color/textColorPrimary</item>
 
-        <item name="android:textColorPrimary">@color/textColorPrimary</item>
-        <item name="android:textColorSecondary">@color/textColorSecondaryBlack</item>
-        <item name="android:textColorTertiary">@color/textColorSecondaryBlack</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
+        <item name="android:textColorSecondary">@color/text_color_secondary</item>
+        <item name="android:textColorTertiary">@color/text_color_tertiary</item>
         <item name="android:textDirection">locale</item>
 
-        <!--        定义统一样式-->
-        <item name="buttonStyle">@style/ButtonStyle</item>
-        <item name="buttonStyleSmall">@style/ButtonStyle</item>
-        <item name="editTextStyle">@style/EditTextStyle</item>
+        <!--        &lt;!&ndash;定义统一样式&ndash;&gt;-->
+        <item name="materialButtonStyle">@style/ButtonStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="editTextStyle">@style/EditTextStyle</item>
+        <item name="textInputStyle">@style/TextInputLayoutStyle</item>
 
         <item name="android:windowBackground">@android:color/white</item>
         <item name="android:windowDisablePreview">true</item>
@@ -26,47 +25,11 @@
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowEnableSplitTouch">false</item><!--全用多点触控-->
-
         <item name="android:splitMotionEvents">false</item><!--全用多点触控-->
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/src_bg_splash</item>
-    </style>
-
-    <!--    全局的按钮样式-->
-    <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:colorButtonNormal">?colorAccent</item>
-        <item name="android:minHeight">60dp</item>
-        <item name="android:textSize">17sp</item>
-        <item name="android:textColor">@android:color/white</item>>
-    </style>
-
-    <!--    全局的按钮样式，没有背景只有文字的那种-->
-    <style name="ButtonStyleNoBackground" parent="Widget.AppCompat.Button.Borderless.Colored">
-        <item name="android:minHeight">48dp</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">@color/selector_text_color_accent</item>
-    </style>
-
-    <!--    全局输入框的样式-->
-    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
-        <item name="android:background">@drawable/selector_edit_default</item>
-        <item name="android:textSize">17sp</item>
-        <item name="android:paddingStart">2dp</item>
-        <item name="android:paddingEnd">2dp</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:inputType">text</item>
-        <item name="android:paddingBottom">12dp
-        </item><!--这里特别注意了，给所有的edittext加上了12DP，从设计图来看，下划线和文字的距离有要求-->
-        <item name="android:textColor">@color/selector_text_color_primary</item>
-        <item name="android:gravity">start|center_vertical</item>
-        <item name="android:textColorHint">@color/textColorSecondaryBlackLight</item>
-    </style>
-
-    <!--    全局文字控件样式-->
-    <style name="TextViewStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">?android:textColorPrimary</item>
     </style>
 
 
