--- a/app/src/main/res/layout/item_splash.xml
+++ b/app/src/main/res/layout/item_splash.xml
@@ -44,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/textColorSecondaryBlackLight"
+        android:textColor="?android:textColorTertiary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
