--- a/app/src/main/res/drawable/bg_et_underline_un_focus.xml
+++ b/app/src/main/res/drawable/bg_et_underline_un_focus.xml
@@ -9,9 +9,8 @@
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="@color/dividerColor" />
+                android:color="?attr/colorControlNormal" />
             <padding android:bottom="4dp" />
         </shape>
     </item>
-
 </layer-list>
