--- a/app/src/main/res/layout/view_phone_edit_text.xml
+++ b/app/src/main/res/layout/view_phone_edit_text.xml
@@ -1,54 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<!--    <TextView-->
-<!--        android:id="@+id/mTvInternationalCode"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/selector_edit_default"-->
-<!--        android:gravity="center"-->
-<!--        android:textColor="@color/selector_text_color_primary"-->
-<!--        android:textSize="17sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/mEtTelephone"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/mTilCallPrefix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/mEtCallPrefix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:cursorVisible="false"
+            android:drawableEnd="@drawable/ic_down_arrow"
+            android:drawablePadding="4dp"
+            android:drawableTint="?android:colorForeground"
+            android:focusable="false"
+            android:gravity="center"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="+86" />
 
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="请输入手机号码" />-->
-<!--        -->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
+    </com.google.android.material.textfield.TextInputLayout>
 
-<!--    <cn.swiftpass.standardwallet.widget.view.ClearEditText-->
-<!--        android:id="@+id/mEtTelephone"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="12dp"-->
-<!--        android:hint="@string/LG01_04_1"-->
-<!--        android:inputType="number"-->
-<!--        android:maxLength="@integer/phone_length"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@id/mTvInternationalCode"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/mTilTelephone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:hint="请输入手机号码">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/mEtTelephone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/mTvError"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:gravity="start|top"-->
-<!--        android:textColor="@color/errorColor"-->
-<!--        android:textSize="12sp"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/mEtTelephone"-->
-<!--        app:layout_constraintStart_toStartOf="@id/mEtTelephone"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/mTvInternationalCode" />-->
-
-</LinearLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+</merge>
