--- a/app/src/main/res/values/style_edit_text.xml
+++ b/app/src/main/res/values/style_edit_text.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
-<!--        <item name="android:background">@drawable/selector_edit_default</item>-->
-<!--        <item name="android:textSize">17sp</item>-->
-        <item name="android:paddingStart">4dp</item>
-        <item name="android:paddingEnd">4dp</item>
+        <item name="android:background">@drawable/bg_edit_text</item>
+        <item name="android:textSize">@dimen/edit_text_text_size</item>
         <item name="android:singleLine">true</item>
         <item name="android:inputType">text</item>
         <item name="android:gravity">start|center_vertical</item>
+        <item name="android:textColorHint">@color/text_color_hint</item>
     </style>
 </resources>
