--- a/app/src/main/res/color/text_color_hint.xml
+++ b/app/src/main/res/color/text_color_hint.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/textColorHintHighLight" android:state_enabled="true" android:state_pressed="true" />
-    <item android:color="@color/textColorHint" />
+    <item android:alpha="0.18" android:color="?android:attr/colorForeground" android:state_enabled="false" />
+    <item android:alpha="0.54" android:color="?android:attr/colorForeground" android:state_enabled="true" android:state_pressed="true" />
+    <item android:alpha="0.35" android:color="?android:attr/colorForeground" android:state_enabled="true" android:state_pressed="false"/>
 </selector>
