--- a/app/src/main/res/drawable/bg_edit_text.xml
+++ b/app/src/main/res/drawable/bg_edit_text.xml
@@ -3,9 +3,7 @@
     android:insetTop="4dp"
     android:insetBottom="4dp">
     <selector>
-        <item
-            android:drawable="@drawable/bg_et_underline_un_focus"
-            android:state_enabled="false" >
+        <item android:state_enabled="false">
             <layer-list>
                 <item
                     android:bottom="0dp"
@@ -16,16 +14,15 @@
                         <solid android:color="@android:color/transparent" />
                         <stroke
                             android:width="1dp"
-                            android:color="?attr/colorControlNormal" />
+                            android:color="@color/text_color_hint" />
                         <padding android:bottom="4dp" />
                     </shape>
                 </item>
             </layer-list>
         </item>
         <item
-            android:drawable="@drawable/bg_et_underline_un_focus"
             android:state_focused="false"
-            android:state_pressed="false" >
+            android:state_pressed="false">
             <layer-list>
                 <item
                     android:bottom="0dp"
@@ -36,24 +33,24 @@
                         <solid android:color="@android:color/transparent" />
                         <stroke
                             android:width="1dp"
-                            android:color="?attr/colorControlNormal" />
+                            android:color="@color/text_color_hint" />
                         <padding android:bottom="4dp" />
                     </shape>
                 </item>
             </layer-list>
         </item>
-        <item android:drawable="@drawable/bg_et_underline_focus" >
+        <item>
             <layer-list>
                 <item
                     android:bottom="0dp"
-                    android:left="-2dp"
-                    android:right="-2dp"
-                    android:top="-6dp">
+                    android:left="-3dp"
+                    android:right="-3dp"
+                    android:top="-7dp">
                     <shape>
                         <solid android:color="@android:color/transparent" />
                         <stroke
-                            android:width="1dp"
-                            android:color="?attr/colorControlNormal" />
+                            android:width="2dp"
+                            android:color="?attr/colorControlActivated" />
                         <padding android:bottom="4dp" />
                     </shape>
                 </item>
