--- a/app/src/main/res/layout/view_phone_edit_text.xml
+++ b/app/src/main/res/layout/view_phone_edit_text.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -35,7 +34,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/mEtTelephone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 </merge>
