--- a/app/src/main/res/values/style_edit_text.xml
+++ b/app/src/main/res/values/style_edit_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:background">@drawable/bg_edit_text</item>
         <item name="android:textSize">@dimen/edit_text_text_size</item>
@@ -7,5 +8,6 @@
         <item name="android:inputType">text</item>
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:textColorHint">@color/text_color_hint</item>
+        <item name="android:backgroundTint">@null</item>
     </style>
 </resources>
