--- a/app/src/main/res/layout/activity_reset_login_password.xml
+++ b/app/src/main/res/layout/activity_reset_login_password.xml
@@ -7,9 +7,8 @@
     android:fitsSystemWindows="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:clipChildren="false"
     android:orientation="vertical"
-    tools:context="me.zhixingye.salty.module.login.view.RegisterActivity">
+    tools:context="me.zhixingye.salty.module.login.view.ResetLoginPasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/Default_mToolbar"
@@ -23,28 +22,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:singleLine="true"
-        android:text="注册账号"
+        android:text="设置登陆密码"
         android:textColor="?colorAccent"
         android:textSize="26sp"
         android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
-        android:text="现在使用您的电话和密码注册"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
-    <me.zhixingye.salty.widget.view.PhoneEditText
-        android:id="@+id/mPetPhone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="20dp" />
 
     <include
         layout="@layout/layout_reset_login_password"
@@ -60,14 +41,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
-        app:text="下一步" />
-
-    <TextView
-        android:id="@+id/mTvTermRules"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"
-        android:textSize="14sp" />
+        app:text="确定" />
 
 </LinearLayout>
