--- a/app/src/main/res/values/style_material_button.xml
+++ b/app/src/main/res/values/style_material_button.xml
@@ -4,6 +4,7 @@
     <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:minHeight">56dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="cornerRadius">32dp</item>
         <item name="android:textColor">@color/btn_text_color</item>
         <item name="backgroundTint">@color/btn_background_tint</item>
     </style>
