--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/text_color_secondary"
+        android:textStyle="bold" />
 
 </LinearLayout>
